--- a/k8s/route.yaml
+++ b/k8s/route.yaml
@@ -3,12 +3,12 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: wagtail
-  name: wagtail
+    app: wagtail-example
+  name: wagtail-example
 spec:
   port:
-    targetPort: 8080-tcp
+    targetPort: 8000-tcp
   to:
     kind: Service
-    name: wagtail
+    name: wagtail-example
     weight: 100
