--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: wagtail
-  name: wagtail
+    app: wagtail-example
+  name: wagtail-example
 spec:
   type: NodePort
   ports:
-    - name: 8080-tcp
-      port: 8080
-      targetPort: 8080
+    - name: 8000-tcp
+      port: 8000
+      targetPort: 8000
       protocol: TCP
   selector:
-    app: wagtail
+    app: wagtail-example
